Closed Bug 1616386 Opened 6 years ago Closed 6 years ago

Quaternion z value is lost in the copy constructor

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: mortimergoro, Assigned: mortimergoro)

Details

Attachments

(1 file)

There is a typo in the Quaternion copy constructor and the y value is set to z.

Assignee: nobody → imanol

Fix Quaternion copy constructor

Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: