Bug 1616386 - Fix Quaternion copy constructor r=lsalzman

Fix Quaternion copy constructor

Differential Revision: https://phabricator.services.mozilla.com/D63255